[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/sprites/avatars/avatar_04.png" type="Texture" id=1]
[ext_resource path="res://assets/theme/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/theme/fonts/body_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://game/ui/hud/StatLine.tscn" type="PackedScene" id=6]
[ext_resource path="res://game/ui/hud/StatBox.gd" type="Script" id=7]
[ext_resource path="res://assets/tilesets/atlas_hud.png" type="Texture" id=10]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 10 )
region = Rect2( 40, 0, 8, 8 )
margin = Rect2( -2, 0, 0, 0 )

[sub_resource type="AtlasTexture" id=147]
atlas = ExtResource( 10 )
region = Rect2( 32, 0, 8, 8 )
margin = Rect2( -2, 0, 0, 0 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 10 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 10 )
region = Rect2( 16, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 10 )
region = Rect2( 24, 0, 8, 8 )

[node name="StatLineRacer" type="VBoxContainer"]
margin_top = -3.0
margin_right = 48.0
margin_bottom = 153.0
theme = ExtResource( 2 )
script = ExtResource( 7 )

[node name="PlayerLine" type="Control" parent="."]
margin_right = 653.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )

[node name="Avatar" type="TextureRect" parent="PlayerLine"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 0
texture = ExtResource( 1 )
expand = true

[node name="PlayerName" type="Label" parent="PlayerLine"]
margin_left = 60.0
margin_top = -1.0
margin_right = 144.0
margin_bottom = 47.0
rect_min_size = Vector2( 0, 13 )
size_flags_horizontal = 0
size_flags_vertical = 0
text = "AXL"
uppercase = true
__meta__ = {
"_editor_description_": ""
}

[node name="GameoverLabel" type="Label" parent="PlayerLine"]
visible = false
margin_right = 95.0
margin_bottom = 13.0
text = "... ZATE JE KONEC!"
__meta__ = {
"_editor_description_": ""
}

[node name="WinLabel" type="Label" parent="PlayerLine"]
visible = false
margin_right = 95.0
margin_bottom = 13.0
text = "... ZMAGA!!!!!!"
__meta__ = {
"_editor_description_": ""
}

[node name="_Comments" type="Label" parent="PlayerLine"]
margin_left = -468.0
margin_top = 4.0
margin_right = -191.0
margin_bottom = 397.0
custom_fonts/font = ExtResource( 3 )
text = "stat node imajo exportane variable za setup"
autowrap = true

[node name="StatWins" parent="." instance=ExtResource( 6 )]
margin_top = 44.0
margin_right = 653.0
margin_bottom = 101.0
stat_type = 2
icon_texture = SubResource( 6 )
show_icons = true

[node name="StatLife" parent="." instance=ExtResource( 6 )]
margin_top = 105.0
margin_right = 653.0
margin_bottom = 162.0
stat_type = 2
icon_texture = SubResource( 147 )
show_icons = true

[node name="StatBullet" parent="." instance=ExtResource( 6 )]
margin_top = 166.0
margin_right = 653.0
margin_bottom = 223.0
size_flags_horizontal = 0
icon_texture = SubResource( 5 )
show_name_icon = true

[node name="StatMisile" parent="." instance=ExtResource( 6 )]
margin_top = 227.0
margin_right = 653.0
margin_bottom = 284.0
size_flags_horizontal = 0
icon_texture = SubResource( 2 )
show_name_icon = true

[node name="StatMina" parent="." instance=ExtResource( 6 )]
margin_top = 288.0
margin_right = 653.0
margin_bottom = 345.0
size_flags_horizontal = 0
icon_texture = SubResource( 3 )
show_name_icon = true

[node name="StatShocker" parent="." instance=ExtResource( 6 )]
margin_top = 349.0
margin_right = 653.0
margin_bottom = 406.0
size_flags_horizontal = 0
icon_texture = SubResource( 1 )
show_name_icon = true

[node name="StatGas" parent="." instance=ExtResource( 6 )]
margin_top = 410.0
margin_right = 653.0
margin_bottom = 467.0
size_flags_horizontal = 0
label_name = "GAS"

[node name="StatPoints" parent="." instance=ExtResource( 6 )]
margin_top = 471.0
margin_right = 653.0
margin_bottom = 528.0
size_flags_horizontal = 0
label_name = "POINTS"

[node name="StatRank" parent="." instance=ExtResource( 6 )]
margin_top = 532.0
margin_right = 653.0
margin_bottom = 589.0
size_flags_horizontal = 0
label_name = "RANK"

[node name="StatLap" parent="." instance=ExtResource( 6 )]
margin_top = 593.0
margin_right = 653.0
margin_bottom = 650.0
size_flags_horizontal = 0
label_name = "CURRENT LAP"

[node name="StatBestLap" parent="." instance=ExtResource( 6 )]
margin_top = 654.0
margin_right = 653.0
margin_bottom = 711.0
size_flags_horizontal = 0
stat_type = 1
label_name = "BEST LAP TIME"
show_time = true

[node name="StatLevelTime" parent="." instance=ExtResource( 6 )]
margin_top = 715.0
margin_right = 653.0
margin_bottom = 772.0
size_flags_horizontal = 0
stat_type = 1
label_name = "RACE TIME"
show_time = true
